--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   gtag('config', 'G-T88B7G6WJZ');
 </script>
     <meta charset="UTF-8">
+    <meta name="description" content="Grungepydia, the Grunge movement Encyclopedia">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Grungepydia</title>
     <script src="https://kit.fontawesome.com/6825416628.js" crossorigin="anonymous"></script>
