--- a/doc.html
+++ b/doc.html
@@ -63,7 +63,7 @@ I valori aggiunti di Grungepydia includono un “grungesque” design e un'esper
     <div id="dropdown-content-project-plan" class="dropdown-content">
         <p>Benchmarking</p>
         <p>1. Obiettivi:
-            L’obiettivo di Grungepydia è creare un sito web che celebra il movimento grunge, offrendo informazioni dettagliate sugli artisti principali, collegando i loro successi migliori ad altre piattaforme per vivere al meglio l’esperienza. </p>
+            L’obiettivo di Grungepydia è arrivare a 50 visite da utenti unici  </p>
             <p>2.   Target Utente:
 Questo sito è indirizzato verso un ampio target utente,  con una fascia d’età che parte dagli adolescenti fino ad arrivare ad individui di 50 anni, ma ancora più in generale il sito è per chi prova interesse per questo genere di musica. </p>
 <p>
