--- a/doc.html
+++ b/doc.html
@@ -63,7 +63,7 @@ I valori aggiunti di Grungepydia includono un “grungesque” design e un'esper
     <div id="dropdown-content-project-plan" class="dropdown-content">
         <p>Benchmarking</p>
         <p>1. Obiettivi:
-            L’obiettivo di Grungepydia è arrivare a 50 visite da utenti unici  </p>
+            L’obiettivo di Grungepydia è creare un sito web che celebra il movimento grunge, offrendo informazioni dettagliate sugli artisti principali, collegando i loro successi migliori ad altre piattaforme per vivere al meglio l’esperienza.  </p>
             <p>2.   Target Utente:
 Questo sito è indirizzato verso un ampio target utente,  con una fascia d’età che parte dagli adolescenti fino ad arrivare ad individui di 50 anni, ma ancora più in generale il sito è per chi prova interesse per questo genere di musica. </p>
 <p>
@@ -111,7 +111,7 @@ I competitors di questo sito sono i siti ufficiali delle singole band e i loro f
    
     <div id="dropdown-content-communication-strategy" class="dropdown-content">
         <p>1.Background:Non essendoci siti simili, i veri pro del sito sono la navigazione intuitiva, l’aspetto accattivante caratteristico del movimento, la velocità di caricamento del sito e i contenuti informativi sulla musica e le band associate. </p>
-        <p>2. Obiettivi Comunicativi: Grungepydia ha come obiettivo principale creare una piattaforma online dedicata al genere grunge e alle sue band iconiche, offrendo un'esperienza coinvolgente per gli appassionati e i nuovi interessati. Il sito mira a promuovere il genere, a presentare band iconiche e in primis essere una risorsa informativa, un punto di partenza per i neo appassionati del genere.</p>
+        <p>2. Obiettivi Comunicativi: Grungepydia ha come obiettivo principale creare una piattaforma online dedicata al genere grunge e alle sue band iconiche, offrendo un'esperienza coinvolgente per gli appassionati e i nuovi interessati. Il sito mira a promuovere il genere, ponendosi l'obiettivo di raggiungere almeno 20 like a un post su Instagram e il raggiungimento di 50 visite al sito web.</p>
         <p>3.Target Audience e Messaggio:Il sito si rivolge principalmente agli appassionati di musica grunge, compresi i fan delle band iconiche del genere. Il target demografico principale sono gli utenti under 40 con un interesse specifico per la cultura grunge. Il sito utilizza principalmente canali online, come i motori di ricerca e i social media, per raggiungere il suo pubblico. Il sito trasmette il messaggio di essere una risorsa completa e coinvolgente per gli amanti della musica grunge, offrendo informazioni dettagliate e un'esperienza multimediale.</p>
       
     </div>
