--- a/doc.html
+++ b/doc.html
@@ -126,7 +126,7 @@ I competitors di questo sito sono i siti ufficiali delle singole band e i loro f
     <h3 class="dropdown-header" onclick="toggleDropdown('results-evaluation')">Valutazione dei Risultati</h3>
     
     <div id="dropdown-content-results-evaluation" class="dropdown-content">
-        <p>Per misurare il successo viene controllato il numero di accessi e la durata all’interno del sito da parte dell’utente, inoltre per tenere traccia dei movimenti viene utilizzato Google Analytics.</p>
+        <p>Per misurare il successo viene controllato il numero di accessi e la durata all’interno del sito da parte dell’utente, inoltre per tenere traccia dei movimenti viene utilizzato Google Analytics. Il sito ha pienamente raggiunto l'obiettivo dei 20 like sulla pagina instagram.</p>
        
     </div>
      <footer >
