--- a/doc.html
+++ b/doc.html
@@ -76,7 +76,7 @@ I competitors di questo sito sono i siti ufficiali delle singole band e i loro f
     <h3 class="dropdown-header" onclick="toggleDropdown('architecture')">Architettura del sito</h3>
     
     <div id="dropdown-content-architecture" class="dropdown-content">
-        <img src="css/img/albero2.jpg" style="width: 50%">
+        <img src="css/img/albero2.jpg" alt="Architettura" style="width: 50%">
     </div>
 
     <h3 class="dropdown-header" onclick="toggleDropdown('wireframe')">Wireframe</h3>
