--- a/aliceinchains.html
+++ b/aliceinchains.html
@@ -70,7 +70,7 @@
 
    <h3>
     Video Gallery
-   <div id="carouselExample" class="carousel slide" data-ride="carousel">
+   <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <video class="d-block w-100" controls>
