--- a/nirvana.html
+++ b/nirvana.html
@@ -74,7 +74,7 @@ Dal debutto ad oggi la band ha venduto quasi 70 milioni di dischi, di cui 25 mil
 
    <h3>
     Video Gallery
-   <div id="carouselExample" class="carousel slide" data-ride="carousel">
+   <div id="carouselExample" class="carousel slide" >
   <div class="carousel-inner">
     <div class="carousel-item active">
       <video class="d-block w-100" controls>
