--- a/doc.html
+++ b/doc.html
@@ -26,6 +26,8 @@
             dropdownContent.style.display = (dropdownContent.style.display === "block") ? "none" : "block";
         }
     </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 </head>
 
 <body class="container-fluid page-doc">
@@ -126,7 +128,9 @@ I competitors di questo sito sono i siti ufficiali delle singole band e i loro f
     <h3 class="dropdown-header" onclick="toggleDropdown('results-evaluation')">Valutazione dei Risultati</h3>
     
     <div id="dropdown-content-results-evaluation" class="dropdown-content">
-        <p>Per misurare il successo viene controllato il numero di accessi e la durata all’interno del sito da parte dell’utente, inoltre per tenere traccia dei movimenti viene utilizzato Google Analytics. Il sito ha pienamente raggiunto l'obiettivo dei 20 like sulla pagina instagram.</p>
+        <p>Per misurare il successo viene controllato il numero di accessi e la durata all’interno del sito da parte dell’utente, inoltre per tenere traccia dei movimenti viene utilizzato Google Analytics.</p>
+        <img src="css/img/instalike.jpg" alt="Screenshot Instagram" style="width: 50%; height: 10%;">
+        <img src="css/img/analytics.jpg" alt="Screenshot Google Analytics" style="width: 50%; height: auto;">
        
     </div>
      <footer >
