--- a/nirvana.html
+++ b/nirvana.html
@@ -29,9 +29,9 @@
 
     <body>
     <h1>Biografia</h1>
-    <p>I Nirvana sono stati un gruppo grunge statunitense formatosi ad Aberdeen (Washington) nel 1987 e attivo sino al 1994, anno della morte del leader Kurt Cobain. Principali artefici del successo del genere grunge e in generale dell'alternative rock, furono una delle band più innovatrici, note e influenti nella musica dei primi anni novanta. Fondatori e membri del gruppo sin dall'esordio furono Kurt Cobain (voce e chitarra) e il bassista Krist Novoselic. Vari batteristi hanno invece militato nel gruppo, tra i quali il primo di rilevante importanza fu Chad Channing, con cui il gruppo registrò l'album d'esordio Bleach (1989) e il successivo demo di Butch Vig, che portò i Nirvana all'attenzione delle major. Channing venne successivamente sostituito a causa della scarsa potenza sonora e della vacillante solidità ritmica. La formazione definitiva fu raggiunta verso la fine del 1990, quando Dave Grohl, ex batterista degli Scream, si unì al gruppo.
+    <p><b> Nirvana sono stati un gruppo grunge statunitense formatosi ad Aberdeen (Washington) nel 1987 e attivo sino al 1994, anno della morte del leader Kurt Cobain. Principali artefici del successo del genere grunge e in generale dell'alternative rock, furono una delle band più innovatrici, note e influenti nella musica dei primi anni novanta. Fondatori e membri del gruppo sin dall'esordio furono Kurt Cobain (voce e chitarra) e il bassista Krist Novoselic. Vari batteristi hanno invece militato nel gruppo, tra i quali il primo di rilevante importanza fu Chad Channing, con cui il gruppo registrò l'album d'esordio Bleach (1989) e il successivo demo di Butch Vig, che portò i Nirvana all'attenzione delle major. Channing venne successivamente sostituito a causa della scarsa potenza sonora e della vacillante solidità ritmica. La formazione definitiva fu raggiunta verso la fine del 1990, quando Dave Grohl, ex batterista degli Scream, si unì al gruppo.
 
-Dal debutto ad oggi la band ha venduto quasi 70 milioni di dischi, di cui 25 milioni solo negli Stati Uniti. I Nirvana sono stati inseriti al 30º posto nella lista dei 100 migliori artisti secondo Rolling Stone e sono stati nominati nel 2003 da MTV come il gruppo più grande di sempre.</p>
+Dal debutto ad oggi la band ha venduto quasi 70 milioni di dischi, di cui 25 milioni solo negli Stati Uniti. I Nirvana sono stati inseriti al 30º posto nella lista dei 100 migliori artisti secondo Rolling Stone e sono stati nominati nel 2003 da MTV come il gruppo più grande di sempre.</b></p>
 
     <h1> Top 3 Album
 
@@ -53,22 +53,28 @@ Dal debutto ad oggi la band ha venduto quasi 70 milioni di dischi, di cui 25 mil
           <div class="col-lg-4">
             <img class="rounded-circle" src="css/img/Bleach.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>Bleach</h2>
-            <p>Bleach è il primo album in studio del gruppo musicale statunitense Nirvana, pubblicato nel giugno del 1989 dalla Sub Pop Records.
+            <p><b> Bleach è il primo album in studio del gruppo musicale statunitense Nirvana, pubblicato nel giugno del 1989 dalla Sub Pop Records.
             Le sedute di registrazione si tennero presso gli studi Reciprocal Recording di Seattle tra il dicembre 1988 e il gennaio 1989.
-            Bleach fallì l'entrata in classifica negli Stati Uniti alla sua pubblicazione, ma venne comunque recensito positivamente dalla critica.Il titolo provvisorio dell'album era Too Many Humans, ma venne rinominato Bleach dopo che Cobain scoprì, durante la tappa nella città di San Francisco, un manifesto che invitava alla prevenzione dell'AIDS.Sin dalla sua pubblicazione nel 1989, Bleach ha venduto oltre 1 900 000 copie nei soli Stati Uniti.È l'album della Sub Pop più venduto di sempre.</p>
-            <p><a class="btn btn-secondary" href="https://open.spotify.com/intl-it/album/1KVGLuPtrMrLlyy4Je6df7"    role="button">Ascolta su Spotify &raquo;</a></p>
+            Bleach fallì l'entrata in classifica negli Stati Uniti alla sua pubblicazione, ma venne comunque recensito positivamente dalla critica.Il titolo provvisorio dell'album era Too Many Humans, ma venne rinominato Bleach dopo che Cobain scoprì, durante la tappa nella città di San Francisco, un manifesto che invitava alla prevenzione dell'AIDS.Sin dalla sua pubblicazione nel 1989, Bleach ha venduto oltre 1 900 000 copie nei soli Stati Uniti.È l'album della Sub Pop più venduto di sempre.</b></p>
+             <p><a class="spotify-button" href="https://open.spotify.com/intl-it/album/1KVGLuPtrMrLlyy4Je6df7"    role="button">
+              <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60">
+            </a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="rounded-circle" src="css/img/nevermind.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>Nevermind</h2>
-            <p>Nevermind è il secondo album in studio del gruppo musicale statunitense Nirvana, pubblicato il 24 settembre 1991 dalla Geffen Records.  Nevermind divenne un enorme successo alla fine del 1991, soprattutto grazie alla popolarità acquisita dal primo singolo estratto da esso, Smells Like Teen Spirit. Fu  il disco di maggior successo commerciale del gruppo di Seattle. Unanimemente considerato l'apice della produzione artistica del gruppo e di tutto il genere grunge, è annoverato tra i migliori album discografici di ogni epoca ed ebbe tra i suoi meriti quello di aumentare la popolarità del rock alternativo.</p>
-            <p><a class="btn btn-secondary" href="https://open.spotify.com/intl-it/album/6okv1avxEgYSdc2JYy6ZEi" role="button">Ascolta su Spotify &raquo;</a></p>
+            <p><b>Nevermind è il secondo album in studio del gruppo musicale statunitense Nirvana, pubblicato il 24 settembre 1991 dalla Geffen Records.  Nevermind divenne un enorme successo alla fine del 1991, soprattutto grazie alla popolarità acquisita dal primo singolo estratto da esso, Smells Like Teen Spirit. Fu  il disco di maggior successo commerciale del gruppo di Seattle. Unanimemente considerato l'apice della produzione artistica del gruppo e di tutto il genere grunge, è annoverato tra i migliori album discografici di ogni epoca ed ebbe tra i suoi meriti quello di aumentare la popolarità del rock alternativo.</b></p>
+            <p><a class="spotify-button" href="https://open.spotify.com/intl-it/album/6okv1avxEgYSdc2JYy6ZEi" role="button">
+              <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60">
+            </a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="rounded-circle" src="css/img/inutero.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>In Utero</h2>
-            <p>“Odio me stesso e voglio morire”. “I Hate Myself and I Want to Die”. Doveva chiamarsi così, in origine, In Utero, il terzo e ultimo album in studio dei Nirvana, quello che chiuse la storia di una delle band più deflagranti e implose più in fretta della storia del rock. Sembra ieri che tutti noi, ancora catturati dell’euforia del nuovo suono che avevamo amato in Nevermind, attendevamo il nuovo album. Sono già passati 30 anni: In Utero usciva in tutto il mondo il 21 settembre del 1993. Erano parole che usava spesso a chi gli chiedeva come stesse. Era una presa in giro: l’artista era stufo che tutti prendessero così sul serio lui e i Nirvana. Sapendo come sono andate a finire le cose, ma anche il suono che ha un disco come In Utero, queste parole acquistano però tutto un altro senso.</p>
-            <p><a class="btn btn-secondary" href="https://open.spotify.com/intl-it/album/7wOOA7l306K8HfBKfPoafr" role="button">Ascolta su Spotify &raquo;</a></p>
+            <p><b>“Odio me stesso e voglio morire”. “I Hate Myself and I Want to Die”. Doveva chiamarsi così, in origine, In Utero, il terzo e ultimo album in studio dei Nirvana, quello che chiuse la storia di una delle band più deflagranti e implose più in fretta della storia del rock. Sembra ieri che tutti noi, ancora catturati dell’euforia del nuovo suono che avevamo amato in Nevermind, attendevamo il nuovo album. Sono già passati 30 anni: In Utero usciva in tutto il mondo il 21 settembre del 1993. Erano parole che usava spesso a chi gli chiedeva come stesse. Era una presa in giro: l’artista era stufo che tutti prendessero così sul serio lui e i Nirvana. Sapendo come sono andate a finire le cose, ma anche il suono che ha un disco come In Utero, queste parole acquistano però tutto un altro senso.</b></p>
+            <p><a class="spotify-button" href="https://open.spotify.com/intl-it/album/7wOOA7l306K8HfBKfPoafr" role="button">
+              <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60">
+            </a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
