--- a/doc.html
+++ b/doc.html
@@ -86,11 +86,11 @@ I competitors di questo sito sono i siti ufficiali delle singole band e i loro f
     <div id="dropdown-content-wireframe" class="dropdown-content">
         <div style="display: flex; align-items: center;">
             <img src="css/img/wireframe.png" alt="Wireframe" style="width: 50%; height: auto;">
-            <p style="margin-left: 40px;">1. Nav<br>2. Collegamenti<br>3. Footer</p>
+            <p style="margin-left: 40px;"></p>
         </div>
         <div style="display: flex; align-items: center; margin-top: 20px;">
             <img src="css/img/wireframe2.png" alt="Wireframe" style="width: 50%; height: auto;">
-            <p style="margin-left: 40px;">1.Nav<br>2. Biografia<br>3. Top 3 Album<br>4. Video Gallery<br>5.Footer</p>
+            <p style="margin-left: 40px;"></p>
         </div>
     </div>
 
