--- a/aliceinchains.html
+++ b/aliceinchains.html
@@ -55,7 +55,7 @@
             <p><a class="spotify-button" href="https://open.spotify.com/intl-it/album/5LbHbwejgZXRZAgzVAjkhj" role="button">
               <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60">
             </a></p>
-          </div><!-- /.col-lg-4 -->
+          </div>ì
           <div class="col-lg-4">
             <img class="rounded-circle" src="css/img/dirt2.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>Dirt</h2>
@@ -63,7 +63,7 @@
             <p><a class="spotify-button" href="https://open.spotify.com/intl-it/album/58NXIEYqmq5dQHg9nV9duM" role="button">
               <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60">
             </a></p>
-          </div><!-- /.col-lg-4 -->
+          </div>
           <div class="col-lg-4">
             <img class="rounded-circle" src="css/img/jarofflies2.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>Jar of Flies</h2>
@@ -71,8 +71,8 @@
             <p><a class="spotify-button" href="https://open.spotify.com/intl-it/album/4FCoFSNIFhK36holxHWCnc" role="button">
               <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60">
             </a></p>
-          </div><!-- /.col-lg-4 -->
-        </div><!-- /.row -->
+          </div>
+        </div>
 
    <h3>
     Video Gallery
