--- a/nirvana.html
+++ b/nirvana.html
@@ -41,7 +41,7 @@ Dal debutto ad oggi la band ha venduto quasi 70 milioni di dischi, di cui 25 mil
  <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-    <!-- Custom styles for this template -->
+    
     <link href="carousel.css" rel="stylesheet">
   
 
@@ -59,7 +59,7 @@ Dal debutto ad oggi la band ha venduto quasi 70 milioni di dischi, di cui 25 mil
              <p><a class="spotify-button" href="https://open.spotify.com/intl-it/album/1KVGLuPtrMrLlyy4Je6df7"    role="button">
               <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60">
             </a></p>
-          </div><!-- /.col-lg-4 -->
+          </div>
           <div class="col-lg-4">
             <img class="rounded-circle" src="css/img/nevermind.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>Nevermind</h2>
@@ -67,7 +67,7 @@ Dal debutto ad oggi la band ha venduto quasi 70 milioni di dischi, di cui 25 mil
             <p><a class="spotify-button" href="https://open.spotify.com/intl-it/album/6okv1avxEgYSdc2JYy6ZEi" role="button">
               <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60">
             </a></p>
-          </div><!-- /.col-lg-4 -->
+          </div>
           <div class="col-lg-4">
             <img class="rounded-circle" src="css/img/inutero.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>In Utero</h2>
@@ -75,8 +75,8 @@ Dal debutto ad oggi la band ha venduto quasi 70 milioni di dischi, di cui 25 mil
             <p><a class="spotify-button" href="https://open.spotify.com/intl-it/album/7wOOA7l306K8HfBKfPoafr" role="button">
               <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60">
             </a></p>
-          </div><!-- /.col-lg-4 -->
-        </div><!-- /.row -->
+          </div>
+        </div>
 
    <h3>
     Video Gallery
