--- a/soundgarden.html
+++ b/soundgarden.html
@@ -39,7 +39,7 @@
  <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-    <!-- Custom styles for this template -->
+    
     <link href="carousel.css" rel="stylesheet">
   
 
@@ -55,7 +55,7 @@
             <p> <a class="spotify-button" href="https://open.spotify.com/intl-it/album/54ixXSRt1COToZvPK2YMqF" role="button">
               <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60">
           </a></p>
-          </div><!-- /.col-lg-4 -->
+          </div>
           <div class="col-lg-4">
             <img class="rounded-circle" src="css/img/superuknown.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>Superuknown</h2>
@@ -63,15 +63,15 @@
             <p><a class="spotify-button" href="https://open.spotify.com/intl-it/album/29sTacnS0qA9xri6YS8xLA" role="button"> 
               <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60">
             </a></p>
-          </div><!-- /.col-lg-4 -->
+          </div>
           <div class="col-lg-4">
             <img class="rounded-circle" src="css/img/downontheupside.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>Down on the Upside</h2>
             <p><b>Filtri che smussano gli angoli di una voce già insolitamente placida, stanchi mugugni sorretti con difficoltà da poche lente note di chitarra, poi la detonazione di uno dei ritornelli più fenomenali di un'intera carriera: è l'immensa "Blow Up The Outside World", un'impeccabile dimostrazione di maestria e di misurata esplosività, che lascia immaginare e pregustare, per il quinto studio album dei Soundgarden, il raggiungimento di orizzonti sempre più rosei, l'ennesimo trionfo che faccia da punto esclamativo di un decennio vissuto da autentici eroi dell'alternative rock. Ma "Down On The Upside", clamorosamente fa cilecca. E a esplodere sono meccanismi di autodistruzione già latenti da anni all'interno della band, nascosti abilmente, in passato, dietro i singoli spaccamascella di "Superunknown". Quattro i membri del gruppo, quattro i diversi e assolutistici approcci alla composizione: tante diventeranno le direzioni musicali, ormai quasi del tutto inconciliabili.</b> </p>
             <p><a class="spotify-button" href="https://open.spotify.com/intl-it/album/1IVa98im1RfxYp6qeOIg2B" role="button"></a>
               <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60"></p>
-          </div><!-- /.col-lg-4 -->
-        </div><!-- /.row -->
+          </div>
+        </div>
 
    <h3>
     Video Gallery
