--- a/pearljam.html
+++ b/pearljam.html
@@ -56,7 +56,7 @@
             <p><b>L'arrivo dei Pearl Jam sulla scena musicale è salutato dagli amanti del rock come l'avvento del messia. Commercialmente parlando, "Ten" è un successo clamoroso, che nel giro di due anni arriverà a vendere oltre dodici milioni di copie solo negli States, superando addirittura "Nevermind" dei Nirvana. La forza dell'album è il suo essere (ancora oggi) così incredibilmente anacronistico. Niente contaminazioni tra punk e hard-rock come la band di Kurt Cobain. Nessuna incursione nel metal come gli Alice In Chains.I Pearl Jam riportano in vita, anche nel modo di atteggiarsi sul palco, l'hard-rock degli anni 70. Ascoltando i loro pezzi tornano in mente gli Who (non a caso Pete Townshend è l'idolo di Vedder), i Led Zeppelin, gli Aerosmith, Neil Young, i Lynyrd Skynyrd. Nessuna sperimentazione: le canzoni di "Ten" sono perfette nella loro semplicità. Molto spesso costruite attorno a un unico riff di chitarra, estremamente melodiche e mainstream, sembrano fatte apposta per riempire le arene, rimpiazzando (o muovendosi accanto) gli U2 nel cuore del pubblico mondiale.</b></p>
             <p><a class="spotify-button" href="https://open.spotify.com/intl-it/album/5B4PYA7wNN4WdEXdIJu58a" role="button">
               <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60"></a></p>
-          </div><!-- /.col-lg-4 -->
+          </div>
           <div class="col-lg-4">
             <img class="rounded-circle" src="css/img/vitalogy.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>Vitalogy</h2>
@@ -64,7 +64,7 @@
             <p><a class="spotify-button" href="https://open.spotify.com/intl-it/album/5pd9B3KQWKshHw4lnsSLNy" role="button">
               <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60">
             </a></p>
-          </div><!-- /.col-lg-4 -->
+          </div>
           <div class="col-lg-4">
             <img class="rounded-circle" src="css/img/avocado.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>Pearl Jam</h2>
@@ -73,8 +73,8 @@
             <p><a class="spotify-button" href="https://open.spotify.com/intl-it/album/5PY2mZGCOMezmWH7hiCwFH">
               <img src="css/img/listenonspotify.jpg" alt="Spotify Logo" width="150" height="60">
             </a></p>
-          </div><!-- /.col-lg-4 -->
-        </div><!-- /.row -->
+          </div>
+        </div>
 
    <h3>
     Video Gallery
